# pcre2demo

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: pcre2demo.c
